--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="container">
         <h1>Trivial Pursuit Interface</h1>
         <div class="buttons">
-            <button onclick="showQuestion(1)">Niveau 1</button>
-            <button onclick="showQuestion(2)">Niveau 2</button>
-            <button onclick="showQuestion(3)">Niveau 3</button>
-            <button onclick="showQuestion(4)">Niveau 4</button>
-            <button onclick="showQuestion(5)">Niveau 5</button>
-            <button onclick="showQuestion(6)">Niveau 6</button>
+            <button onclick="showQuestion(1)">INC</button>
+            <button onclick="showQuestion(2)">SAP</button>
+            <button onclick="showQuestion(3)">PPABE</button>
+            <button onclick="showQuestion(4)">GOG</button>
+            <button onclick="showQuestion(5)">FDF</button>
+            <button onclick="showQuestion(6)">CAD</button>
         </div>
         <div id="question"></div>
         <div id="answer"></div>
