--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button class="card-button" onclick="showQuestion(5)">GOG</button>
             <button class="card-button" onclick="showQuestion(6)">CAD</button>
         </div>
+        <button id="show-answer" class="answer-button" onclick="showAnswer()">Réponse</button>
         <div id="question"></div>
         <div id="answer"></div>
     </div>
