--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="container">
         <h1>Trivial Pursuit Interface</h1>
         <div class="buttons">
-            <button class="card-button" onclick="showQuestion('INC')">INC</button>
-            <button class="card-button" onclick="showQuestion('SAP')">SAP</button>
-            <button class="card-button" onclick="showQuestion('PPABE')">PPABE</button>
-            <button class="card-button" onclick="showQuestion('FDF')">FDF</button>
-            <button class="card-button" onclick="showQuestion('GOG')">GOG</button>
-            <button class="card-button" onclick="showQuestion('CAD')">CAD</button>
+            <button class="card-button red" onclick="showQuestion('INC')">INC</button>
+            <button class="card-button green" onclick="showQuestion('SAP')">SAP</button>
+            <button class="card-button blue" onclick="showQuestion('PPABE')">PPABE</button>
+            <button class="card-button brown" onclick="showQuestion('FDF')">FDF</button>
+            <button class="card-button purple" onclick="showQuestion('GOG')">GOG</button>
+            <button class="card-button yellow" onclick="showQuestion('CAD')">CAD</button>
         </div>
         <button id="show-answer" class="answer-button" onclick="showAnswer()">Réponse</button>
         <button id="reset" class="reset-button" onclick="reset()">Encore ?</button>
