--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div id="question"></div>
         <div id="answer"></div>
     </div>
+    <input type="file" id="file-input" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
