--- a/index.html
+++ b/index.html
@@ -9,50 +9,19 @@
 <body>
     <div class="container">
         <h1>Trivial Pursuit Interface</h1>
-        <div class="cards">
-            <div class="card red" onclick="flipCard(this, 'INC')">
-                <div class="card-inner">
-                    <div class="card-front">INC</div>
-                    <div class="card-back"></div>
-                </div>
-            </div>
-            <div class="card green" onclick="flipCard(this, 'SAP')">
-                <div class="card-inner">
-                    <div class="card-front">SAP</div>
-                    <div class="card-back"></div>
-                </div>
-            </div>
-            <div class="card blue" onclick="flipCard(this, 'PPABE')">
-                <div class="card-inner">
-                    <div class="card-front">PPABE</div>
-                    <div class="card-back"></div>
-                </div>
-            </div>
-            <div class="card brown" onclick="flipCard(this, 'FDF')">
-                <div class="card-inner">
-                    <div class="card-front">FDF</div>
-                    <div class="card-back"></div>
-                </div>
-            </div>
-            <div class="card purple" onclick="flipCard(this, 'GOG')">
-                <div class="card-inner">
-                    <div class="card-front">GOG</div>
-                    <div class="card-back"></div>
-                </div>
-            </div>
-            <div class="card yellow" onclick="flipCard(this, 'CAD')">
-                <div class="card-inner">
-                    <div class="card-front">CAD</div>
-                    <div class="card-back"></div>
-                </div>
-            </div>
+        <div class="buttons">
+            <button class="card-button red" onclick="showQuestion('INC')">INC</button>
+            <button class="card-button green" onclick="showQuestion('SAP')">SAP</button>
+            <button class="card-button blue" onclick="showQuestion('PPABE')">PPABE</button>
+            <button class="card-button brown" onclick="showQuestion('FDF')">FDF</button>
+            <button class="card-button purple" onclick="showQuestion('GOG')">GOG</button>
+            <button class="card-button yellow" onclick="showQuestion('CAD')">CAD</button>
         </div>
         <button id="show-answer" class="answer-button" onclick="showAnswer()">Réponse</button>
         <button id="reset" class="reset-button" onclick="reset()">Encore ?</button>
+        <div id="question"></div>
         <div id="answer"></div>
     </div>
-    <input type="file" id="file-input" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
