--- a/index.html
+++ b/index.html
@@ -10,12 +10,30 @@
     <div class="container">
         <h1>Trivial Pursuit Interface</h1>
         <div class="buttons">
-            <button class="card-button red" onclick="showQuestion('INC')">INC</button>
-            <button class="card-button green" onclick="showQuestion('SAP')">SAP</button>
-            <button class="card-button blue" onclick="showQuestion('PPABE')">PPABE</button>
-            <button class="card-button brown" onclick="showQuestion('FDF')">FDF</button>
-            <button class="card-button purple" onclick="showQuestion('GOG')">GOG</button>
-            <button class="card-button yellow" onclick="showQuestion('CAD')">CAD</button>
+            <div class="card red" onclick="showQuestion('INC')">
+                <div class="card-front">INC</div>
+                <div class="card-back" id="INC-back"></div>
+            </div>
+            <div class="card green" onclick="showQuestion('SAP')">
+                <div class="card-front">SAP</div>
+                <div class="card-back" id="SAP-back"></div>
+            </div>
+            <div class="card blue" onclick="showQuestion('PPABE')">
+                <div class="card-front">PPABE</div>
+                <div class="card-back" id="PPABE-back"></div>
+            </div>
+            <div class="card brown" onclick="showQuestion('FDF')">
+                <div class="card-front">FDF</div>
+                <div class="card-back" id="FDF-back"></div>
+            </div>
+            <div class="card purple" onclick="showQuestion('GOG')">
+                <div class="card-front">GOG</div>
+                <div class="card-back" id="GOG-back"></div>
+            </div>
+            <div class="card yellow" onclick="showQuestion('CAD')">
+                <div class="card-front">CAD</div>
+                <div class="card-back" id="CAD-back"></div>
+            </div>
         </div>
         <button id="show-answer" class="answer-button" onclick="showAnswer()">Réponse</button>
         <button id="reset" class="reset-button" onclick="reset()">Encore ?</button>
