--- a/index.html
+++ b/index.html
@@ -11,28 +11,40 @@
         <h1>Trivial Pursuit Interface</h1>
         <div class="buttons">
             <div class="card red" onclick="showQuestion('INC')">
-                <div class="card-front">INC</div>
-                <div class="card-back" id="INC-back"></div>
+                <div class="card-inner">
+                    <div class="card-front">INC</div>
+                    <div class="card-back" id="INC-back"></div>
+                </div>
             </div>
             <div class="card green" onclick="showQuestion('SAP')">
-                <div class="card-front">SAP</div>
-                <div class="card-back" id="SAP-back"></div>
+                <div class="card-inner">
+                    <div class="card-front">SAP</div>
+                    <div class="card-back" id="SAP-back"></div>
+                </div>
             </div>
             <div class="card blue" onclick="showQuestion('PPABE')">
-                <div class="card-front">PPABE</div>
-                <div class="card-back" id="PPABE-back"></div>
+                <div class="card-inner">
+                    <div class="card-front">PPABE</div>
+                    <div class="card-back" id="PPABE-back"></div>
+                </div>
             </div>
             <div class="card brown" onclick="showQuestion('FDF')">
-                <div class="card-front">FDF</div>
-                <div class="card-back" id="FDF-back"></div>
+                <div class="card-inner">
+                    <div class="card-front">FDF</div>
+                    <div class="card-back" id="FDF-back"></div>
+                </div>
             </div>
             <div class="card purple" onclick="showQuestion('GOG')">
-                <div class="card-front">GOG</div>
-                <div class="card-back" id="GOG-back"></div>
+                <div class="card-inner">
+                    <div class="card-front">GOG</div>
+                    <div class="card-back" id="GOG-back"></div>
+                </div>
             </div>
             <div class="card yellow" onclick="showQuestion('CAD')">
-                <div class="card-front">CAD</div>
-                <div class="card-back" id="CAD-back"></div>
+                <div class="card-inner">
+                    <div class="card-front">CAD</div>
+                    <div class="card-back" id="CAD-back"></div>
+                </div>
             </div>
         </div>
         <button id="show-answer" class="answer-button" onclick="showAnswer()">Réponse</button>
