--- a/index.html
+++ b/index.html
@@ -9,46 +9,18 @@
 <body>
     <div class="container">
         <h1>Trivial Pursuit Interface</h1>
+        <div id="question"></div>
         <div class="buttons">
-            <div class="card red" onclick="showQuestion('INC')">
-                <div class="card-inner">
-                    <div class="card-front">INC</div>
-                    <div class="card-back" id="INC-back"></div>
-                </div>
-            </div>
-            <div class="card green" onclick="showQuestion('SAP')">
-                <div class="card-inner">
-                    <div class="card-front">SAP</div>
-                    <div class="card-back" id="SAP-back"></div>
-                </div>
-            </div>
-            <div class="card blue" onclick="showQuestion('PPABE')">
-                <div class="card-inner">
-                    <div class="card-front">PPABE</div>
-                    <div class="card-back" id="PPABE-back"></div>
-                </div>
-            </div>
-            <div class="card brown" onclick="showQuestion('FDF')">
-                <div class="card-inner">
-                    <div class="card-front">FDF</div>
-                    <div class="card-back" id="FDF-back"></div>
-                </div>
-            </div>
-            <div class="card purple" onclick="showQuestion('GOG')">
-                <div class="card-inner">
-                    <div class="card-front">GOG</div>
-                    <div class="card-back" id="GOG-back"></div>
-                </div>
-            </div>
-            <div class="card yellow" onclick="showQuestion('CAD')">
-                <div class="card-inner">
-                    <div class="card-front">CAD</div>
-                    <div class="card-back" id="CAD-back"></div>
-                </div>
-            </div>
+            <button class="btn red" onclick="showQuestion('INC')">INC</button>
+            <button class="btn green" onclick="showQuestion('SAP')">SAP</button>
+            <button class="btn blue" onclick="showQuestion('PPABE')">PPABE</button>
+            <button class="btn brown" onclick="showQuestion('FDF')">FDF</button>
+            <button class="btn purple" onclick="showQuestion('GOG')">GOG</button>
+            <button class="btn yellow" onclick="showQuestion('CAD')">CAD</button>
         </div>
         <button id="show-answer" class="answer-button" onclick="showAnswer()">Réponse</button>
         <button id="reset" class="reset-button" onclick="reset()">Encore ?</button>
+        <div id="answer"></div>
     </div>
     <script src="script.js"></script>
 </body>
